- automatically scroll command log to the bottom when new lines are added
- less verbose output in command log (removed "issuing command", etc.)
- use KXMLGUI for placing plugins in the menu (mostly an internal change, but menu placement should remain sane, when active window changes, now)
- help-, output-, and editor-views can be detached to separate windows
- allow to bypass startup dialog
- back/forward navigation in help pages
- can print help pages and output
- better handling of errors while installing packages
- limit number of lines to display in console and command log (user setting)
- remove menu clutter from help window, and output window
- avoid adding incomplete (multi-line) Console commands to the Command Log
- Settings->Command Log->show/raise window working again
- allow loading/saving of command history (console commands)
- add (meaningful) context menu for console
- allow interrupting current command running in the console via Ctrl+C
- add "Command stack" window for advanced control of R backend (cancel commands, pause chain, view stack)
- modifiy rkward.desktop to always start rkward in a terminal. The backend sometimes behaves strangely, if this is not done.
- use available.packages instead of CRAN.packages (deprecated in R 2.2.0)
- fix installation of standard_plugins.pluginmap
- allow configuration of many R options in Settings->R backend
- updated French translation
- make "up"-button work in R-backend repository settings
- more code cleanups

--- Version 0.3.3 - Oct-06-2005
- honor debug-level setting everywhere
- reworked handling of output from R (no more file-sinks)
- fix display of warning messages (behavior does not match plain R, yet, but is mostly sane)
- option to change list of package repositories
- option to archive downloaded packages
- assorted bugfixes
- provide context/function help for the console
- output-window has been switched to KPart-infrastructure
- command-editor has been switched to KPart-infrastructure completely