@@ -37,8 +37,6 @@ RKwatch:
 
 - check whether we're running in a PTY, and warn otherwise. Currently the R backend needs this.
 
-- "real time" display of output in the console (remember to add Mutex protection before then!)
-
 - remove classes/files:
 	- RKCommandEditor (first check for reusable functionality)
 		- RKPlugin still uses RKCommandEditor. Convert to use RKCommandEditorWindow instead.
